--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
          <thead class="table-primary">  
     <tr>
-    <th onclick="sortTable(0)"  >ID</th>
-    <th onclick="sortTable(1)">Une désignation</th>
+    <th >ID</th>
+    <th >Une désignation</th>
     <th> prix (Dhs)</th>
     <th>Une catégorie</th>
     <th>Une disponibilité </th>
